--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.3.0</version>
+        </dependency>      
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
