--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
-graph.flagEncoders=car|turnCosts=true
+graph.flag_encoders=car|turn_costs=true
 
 graph.dataaccess=RAM_STORE
 
 # currently required for traffic data, otherwise you would need to regularly re-import
-prepare.chWeighting=no
+prepare.ch.weightings=no
