--- a/pom.xml
+++ b/pom.xml
@@ -3,25 +3,25 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.graphhopper</groupId>
     <artifactId>traffic-demo</artifactId>
-    <version>0.4.1-SNAPSHOT</version>
+    <version>0.7.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Traffic Demo</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-        <jackson.version>2.5.1</jackson.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <jackson.version>2.7.3</jackson.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>com.graphhopper</groupId>
             <artifactId>graphhopper</artifactId>
-            <version>0.4.1</version>            
+            <version>0.7.0</version>            
         </dependency>
         <dependency>
             <groupId>com.graphhopper</groupId>
             <artifactId>graphhopper-web</artifactId>
-            <version>0.4.1</version>            
+            <version>0.7.0</version>            
         </dependency>        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -42,9 +42,9 @@
         </dependency>
         
         <dependency>
-            <groupId>com.squareup.okhttp</groupId>
+            <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>2.3.0</version>
+            <version>3.2.0</version>
         </dependency>      
         
         <dependency>
