--- a/pom.xml
+++ b/pom.xml
@@ -3,25 +3,25 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.graphhopper</groupId>
     <artifactId>traffic-demo</artifactId>
-    <version>0.7.1-SNAPSHOT</version>
+    <version>0.8.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Traffic Demo</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <jackson.version>2.7.3</jackson.version>
+        <jackson.version>2.8.4</jackson.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>com.graphhopper</groupId>
-            <artifactId>graphhopper</artifactId>
-            <version>0.7.0</version>            
+            <artifactId>graphhopper-core</artifactId>
+            <version>0.8.2</version>            
         </dependency>
         <dependency>
             <groupId>com.graphhopper</groupId>
             <artifactId>graphhopper-web</artifactId>
-            <version>0.7.0</version>            
+            <version>0.8.2</version>            
         </dependency>        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>3.2.0</version>
+            <version>3.4.1</version>
         </dependency>      
         
         <dependency>
@@ -59,7 +59,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.5.3</version>
+                <version>2.6</version>
                 <configuration>
                     <archive>
                         <manifest>
