* added assembly with web assets * updated metadata for jackson entity classes * updated graphhopper to 0.10.0

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "jshint src/main/webapp/js/"
   },
   "browserify": {
-    "transform": [ "browserify-swap" ]
+    "transform": [
+      "browserify-swap"
+    ]
   },
   "browserify-swap": {
     "production": {
