--- a/pom.xml
+++ b/pom.xml
@@ -11,17 +11,18 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <jackson.version>2.9.7</jackson.version>
+        <graphhopper.version>0.10.0</graphhopper.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>com.graphhopper</groupId>
             <artifactId>graphhopper-core</artifactId>
-            <version>0.9.0</version>
+            <version>${graphhopper.version}</version>
         </dependency>
         <dependency>
             <groupId>com.graphhopper</groupId>
             <artifactId>graphhopper-web</artifactId>
-            <version>0.9.0</version>
+            <version>${graphhopper.version}</version>
         </dependency>        
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -66,11 +67,9 @@
                             <mainClass>com.graphhopper.traffic.demo.DemoServer</mainClass>
                         </manifest>
                     </archive>
-                        	                    
-                    <!-- for standalone usage -->
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+                    <descriptors>
+                        <descriptor>src/main/assembly/web-assembly.xml</descriptor>
+                    </descriptors>
                 </configuration>
             </plugin>
         </plugins>
